[tool.poetry]
name = "PYT-Metadata"
version = "1.1.1"
description = "Metadata generator from python toolboxes"
authors = ["Cody Scott <jcodyscott+PYTMETA@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
Markdown = "^3.3.6"
Jinja2 = "^3.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
