[metadata]

name = PYT-Metadata
version = 1.0.2
author = Cody Scott
author_email = jcodyscott+PYTMETA@gmail.com
description = Metadata generator from python toolboxes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/namur007/PYT-Metadata
project_urls =
    Bug Tracker = https://github.com/namur007/PYT-Metadata/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

install_requires =
    jinja2
    markdown